// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders when authenticated 1`] = `
<DocumentFragment>
  <div>
    <table
      class="table is-hoverable is-fullwidth"
    >
      <thead>
        <tr>
          <th>
            Id
          </th>
          <th>
            Email
          </th>
          <th />
        </tr>
      </thead>
      <tbody>
        <tr>
          <td>
            1
          </td>
          <td
            class="user-email"
          >
            test1@test.com
          </td>
          <td>
            <button
              class="button is-danger is-small"
            >
              Delete
            </button>
          </td>
        </tr>
        <tr>
          <td>
            2
          </td>
          <td
            class="user-email"
          >
            test2@test.com
          </td>
          <td>
            <button
              class="button is-danger is-small"
            >
              Delete
            </button>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</DocumentFragment>
`;

exports[`renders when not authenticated 1`] = `
<DocumentFragment>
  <div>
    <table
      class="table is-hoverable is-fullwidth"
    >
      <thead>
        <tr>
          <th>
            Id
          </th>
          <th>
            Email
          </th>
        </tr>
      </thead>
      <tbody>
        <tr>
          <td>
            1
          </td>
          <td
            class="user-email"
          >
            test1@test.com
          </td>
        </tr>
        <tr>
          <td>
            2
          </td>
          <td
            class="user-email"
          >
            test2@test.com
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</DocumentFragment>
`;
